description = "today-blog API"

apply plugin: "application"
apply plugin: 'infra.application'
apply plugin: 'cn.taketoday.blog.conventions'
apply plugin: 'cn.taketoday.blog.optional-dependencies'

//apply plugin: 'infra.application.aot'
//apply plugin: 'org.graalvm.buildtools.native'

dependencies {

  implementation 'cn.taketoday:ip2region-java:1.0-SNAPSHOT'
  implementation 'cn.taketoday:infra-starter-netty-server'
  implementation 'cn.taketoday:infra-starter-webmvc'
  implementation 'cn.taketoday:infra-starter-json'
  implementation 'cn.taketoday:infra-starter-restclient'
  implementation 'cn.taketoday:infra-starter-http-service'
  implementation 'cn.taketoday:infra-starter-validation'
  implementation 'cn.taketoday:infra-starter-jdbc'
  implementation 'cn.taketoday:infra-starter-mail'
  implementation 'cn.taketoday:infra-starter-freemarker'
  implementation 'eu.bitwalker:UserAgentUtils:1.21'
  implementation 'com.mysql:mysql-connector-j'
  implementation 'com.aliyun.oss:aliyun-sdk-oss:3.16.0'

  compileOnly 'org.projectlombok:lombok'
  annotationProcessor 'org.projectlombok:lombok'

  implementation 'ch.qos.logback:logback-classic'
  implementation 'com.github.ben-manes.caffeine:caffeine'

  annotationProcessor "cn.taketoday:infra-configuration-processor"
  annotationProcessor "cn.taketoday:infra-annotation-config-processor"

  testImplementation 'cn.taketoday:infra-starter-test'
  testImplementation 'io.projectreactor:reactor-test'

  testImplementation("org.junit.jupiter:junit-jupiter-api")
  testImplementation("org.junit.jupiter:junit-jupiter-params")
  testImplementation("org.junit.platform:junit-platform-suite-api")
  testImplementation("org.mockito:mockito-core")
  testImplementation("org.mockito:mockito-junit-jupiter")
  testImplementation("junit:junit")
  testImplementation("org.assertj:assertj-core")
  testImplementation 'org.projectlombok:lombok'
  testAnnotationProcessor("org.projectlombok:lombok")

  // Pull in the latest JUnit 5 Launcher API to ensure proper support in IDEs.
  testRuntimeOnly("org.junit.jupiter:junit-jupiter-engine")
  testRuntimeOnly("org.junit.platform:junit-platform-launcher")
  testRuntimeOnly("org.junit.platform:junit-platform-suite-engine")

}

compileJava {
  sourceCompatibility = JavaVersion.VERSION_21
  targetCompatibility = JavaVersion.VERSION_21

}

application {
  applicationDefaultJvmArgs = [
      "-server",
      "--add-opens=java.base/java.nio=ALL-UNNAMED",
      "--add-opens=java.base/sun.nio.ch=ALL-UNNAMED",
//      "-Dinfra.profiles.active=prod",
      "-Dio.netty.leakDetection.level=disabled",
      "-Xms512M",
      "-Xmx512M"
  ]
}

infraJar {
  layered {
    includeLayerTools = false
  }
}

infraApplication {
  buildInfo {

  }
}


test {
  useJUnitPlatform()

}

distributions {
  main {
    contents {
      from("src/main/bin") {
        into 'bin'
        filePermissions {
          unix("rwxr-xr-x")
        }
      }
    }
  }
}